# PREPARE-Extraction-Tool

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  README.md  create_tables.py  pyproject.toml  requirements.txt  test.db
backend/alembic/versions/: 001_initial_schema.py  002_add_mapping_status_fields.py  003_add_vocabulary_status_fields.py  004_add_extraction_job.py  005_change_vocabulary_table.py  006_add_status_to_vocabulary_table.py  007_alter_vocabulary_status_enum.py  008_add_refresh_token_table.py  011_add_status_to_dataset_table.py  012_add_dataset_date_label_visit_date_and_.py  013_add_manual_visit_date.py  014_add_comment_to_source_to_concept_map.py
backend/app/: file_parser.py  interfaces.py  main.py  models.py  models_db.py  schemas.py
backend/app/core/: database.py  model_registry.py  settings.py
backend/app/core/models/: embedding_model2vec.py
backend/app/crud/: user.py
backend/app/routes/: auth.py
backend/app/routes/v1/: Adatasets.py  Alogin.py  Asource_term.py  Avocabularies.py  __init__.py  auth.py  bioner.py  clusters.py  datasets.py  index.py  login.py  mappings.py  register.py  source_term.py  vocabularies.py
backend/app/tests/: test_datasets.py  test_login.py  test_source_term.py  test_vocabularies.py
backend/app/utils/: fake_db.py  value_typing.py
backend/concept_mapping/: docker-compose.yml  es.py  es_client.py  plan.txt  test.py
bioner/: .dockerignore  Dockerfile  README.md  requirements.txt
frontend/: .prettierrc  Dockerfile  README.md  nginx.conf  (+5 more)
(+107 files in other folders)
